--- a/css/zzz-modif-dweb.css
+++ b/css/zzz-modif-dweb.css
@@ -282,3 +282,10 @@ li.mn-menu-item.mn-item-lvl-1 a:first-child {
 .bloc-home-youtube .main-title:after {
     background-color: #F7C452;
 }
+.bloc-home-youtube iframe {
+	display:block;
+	margin:0 auto;
+}
+.bloc-home-youtube{
+    background: linear-gradient(180deg, #F5F7FC 90%, #FFF 50%);
+}
