--- a/css/zzz-modif-dweb.css
+++ b/css/zzz-modif-dweb.css
@@ -281,6 +281,13 @@ li.mn-menu-item.mn-item-lvl-1 a:first-child {
 
 .bloc-home-youtube .main-title:after {
     background-color: #F7C452;
+    content: '';
+    clear: both;
+    display: block;
+    width: 35px;
+    margin-right: 15px;
+    height: 4px;
+    margin-top: 30px;
 }
 .bloc-home-youtube iframe {
 	display:block;
