--- a/css/visual-style-agence.css
+++ b/css/visual-style-agence.css
@@ -168,11 +168,11 @@ a.txt-lightblue:hover {
 
 /* HEADINGS */
 
-h1 {
+h1, .faq-main-title, h1.main-title, h1.la-main-title {
     font-size: 4.2rem !important;
     font-family: 'Poppins', sans-serif !important;
     font-weight: 600;
-    color: #001E60;
+    color: #001E60 !important;
     text-transform: none !important;
 }
 
