--- a/css/visual-style-agence.css
+++ b/css/visual-style-agence.css
@@ -1240,6 +1240,7 @@ input[type="email"]:-moz-placeholder { /* Firefox 18- */
     font-family: 'Poppins', sans-serif;
     left: 70px;
     margin: 0;
+    line-height: 4rem;
 }
 
 .at-main-title:before {
