--- a/css/visual-style-agence.css
+++ b/css/visual-style-agence.css
@@ -841,6 +841,28 @@ h5, .h5-like {
     position: relative;
 }
 
+.newsletter-form .loading-inner .shape {
+    width: 10px;
+    height: 10px;
+    background-color: #F7C452;
+}
+
+.newsletter-form .loading-inner {
+    display: inline-block;
+}
+
+.nf-loading .loading-txt {
+    margin: 0;
+}
+
+.nf-loading {
+    text-align: right;
+}
+
+.nf-main-content p {
+    display: inline-block;
+}
+
 /*.block-page.newsletter-form label {
     display: none;
 }*/
