--- a/css/zzz-modif-dweb.css
+++ b/css/zzz-modif-dweb.css
@@ -187,7 +187,7 @@
     margin-top: 0 !important;
 }
 
-.sitemap .layout-2-col{
+.sitemap .layout-2-col, .partner .layout-2-col{
     padding-top: 127px;
 }
 
