--- a/css/visual-style-agence.css
+++ b/css/visual-style-agence.css
@@ -1209,23 +1209,26 @@ input[type="email"]:-moz-placeholder { /* Firefox 18- */
 }
 
 .article-title {
-    min-height: 480px;
+    height: 480px;
     background: #0745fa url('img/hero-bg.jpg') no-repeat;
     background-size: cover;
     background-position: 50% 50%;
     margin-top: 0;
     margin-bottom: 6rem;
+    padding-top: 87px;
 }
 
 .article-title .inside {
     position: relative;
-    top: 190px;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 .article-title .at-content {
     width: 100%;
     position: inherit;
     bottom: inherit;
+    padding-bottom: 0;
 }
 
 .article-title h1 {
@@ -1249,12 +1252,6 @@ input[type="email"]:-moz-placeholder { /* Firefox 18- */
     -webkit-flex: inherit;
     -ms-flex: inherit;
     flex: inherit;
-    top: 50%;
-    -webkit-transform: translateY(-50%);
-    -moz-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    -o-transform: translateY(-50%);
-    transform: translateY(-50%);
     position: relative;
     text-shadow: none;
     text-transform: none;
@@ -1297,12 +1294,6 @@ input[type="email"]:-moz-placeholder { /* Firefox 18- */
     margin: 0;
     width: 100%;
     position: relative;
-    top: 50%;
-    -webkit-transform: translateY(-50%);
-    -moz-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    -o-transform: translateY(-50%);
-    transform: translateY(-50%);
     padding-left: 170px;
 }
 
