remove padding on title

--- a/css/visual-style-agence.css
+++ b/css/visual-style-agence.css
@@ -933,7 +933,7 @@ input[type="email"]:-moz-placeholder { /* Firefox 18- */
 }
 
 .block-page .inside {
-    padding: 2rem;
+    padding: 0 2rem;
 }
 
 /* Liens footer */
