--- a/css/visual-style-agence.css
+++ b/css/visual-style-agence.css
@@ -18,6 +18,7 @@ body{
 /* LINKS */
 
 a, .link-read-more {
+    border-bottom: 1px solid transparent;
     color: #0645F9;
     text-decoration: none;
 }
@@ -25,6 +26,14 @@ a, .link-read-more {
 a:focus, a:active, a:hover, .link-read-more:hover {
     color: #0645F9;
     border-bottom: 1px solid #0645F9;
+}
+
+a, [class^="btn"] {
+    -webkit-transition: border time;
+    -moz-transition: border time;
+    -ms-transition: border time;
+    -o-transition: border time;
+    transition: border time;
 }
 
 .link-read-more {
