--- a/css/zzz-modif-dweb.css
+++ b/css/zzz-modif-dweb.css
@@ -327,3 +327,8 @@ background-color: #ffffff;
 .bn-list li.bn-item:nth-child(2) a.bn-item-link {
     pointer-events: none;
 }
+
+/**** ENLEVER TITRE THEME ET TITRE FAQ ****/
+.faq .faq-sub-title, .faq .js-sna-menu, .faq .fc-title {
+    display: none;
+}
