Move logo : Média queries
Déplacer le logo en dessous de 1100px de large pour placer les boutons d'action du header

--- a/css/zzz-modif-dweb.css
+++ b/css/zzz-modif-dweb.css
@@ -352,3 +352,12 @@ background-color: #ffffff;
     display: inline-block;
     padding-left: 10px;
 }
+
+/**** DEPLACER LOGO POUR TABLETTE *****/
+
+@media screen and (max-width: 1020px) {
+  .site-banner.is-stuck .logo, .site-banner .logo {
+    margin-top: -30px;
+    margin-left: 25px !important;
+  }
+}
