--- a/css/zzz-modif-dweb.css
+++ b/css/zzz-modif-dweb.css
@@ -395,6 +395,7 @@ margin-left:15px;
 .social-sharing {
     border-left: 2px solid rgba( 6,69,249,.8);
     padding: 1.35em 1em;
+	margin: 20px 0 20px 0;
 }
 
 .social-sharing .inside {
