--- a/css/zzz-modif-dweb.css
+++ b/css/zzz-modif-dweb.css
@@ -407,11 +407,6 @@ margin-left:15px;
     border: transparent;
 }
 
-.block.block-page.social-sharing:first-child {
-    border-left: 2px solid rgba( 6,69,249,.8);
-	    background-color: #F5F5F5;
-}
-
 .social-sharing .sr-title {
     display: inline-block;
 }
@@ -475,6 +470,10 @@ margin-left:15px;
     margin-top: 2em;
     padding: 0;
     margin-bottom: 2em;
+}
+.block.block-page.social-sharing:first-child{
+	    border-left: transparent;
+    background-color: transparent;
 }
 .social-sharing [class^="btn-"] .icon {
     margin: 0;
