--- a/css/zzz-modif-dweb.css
+++ b/css/zzz-modif-dweb.css
@@ -480,3 +480,9 @@ margin-left:15px;
     float: none;
     font-size: 2.8rem;
 }
+
+/*** NEWSLETTER ***/
+
+.block-page.newsletter-form .box-dark{
+z-index:-1;
+}
